--- a/android/res/layout/main.xml
+++ b/android/res/layout/main.xml
@@ -34,6 +34,22 @@
                 android:textColor="#fff"
                 android:textSize="19sp" >
             </Button>
+            
+                       <Button
+                android:id="@+id/buttonTest2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/frame_background"
+                android:clickable="true"
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp"
+                android:text="测试2"
+                android:textColor="#fff"
+                android:textSize="19sp" >
+            </Button>
 
             <RelativeLayout
                 android:layout_width="wrap_content"
